<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
            android:title="@string/synchronizing_preferences">
        
        <EditTextPreference
                android:key="limit"
                android:title="@string/limit_preference_title"
                android:summary="@string/limit_preference_summary"
                android:dialogTitle="@string/limit_preference_dialog_title"
                android:inputType="number" 
                android:defaultValue="1"
                />
        
        <CheckBoxPreference
                android:key="synchronization_full"
                android:title="@string/full_synchro_preference_title"
                android:summary="@string/full_synchro_preference_summary" 
                android:defaultValue="false"/>
        <CheckBoxPreference
                android:key="unread_synchro"
                android:title="@string/unread_synchro_preference_title"
                android:summary="@string/unread_synchro_preference_summary" 
                android:defaultValue="false"
                android:dependency="synchronization_full"/>    
        <CheckBoxPreference
                android:key="archived_synchro"
                android:title="@string/archived_synchro_preference_title"
                android:summary="@string/archived_synchro_preference_summary" 
                android:defaultValue="false"
                android:dependency="synchronization_full"/>
        <CheckBoxPreference
                android:key="favourites_synchro"
                android:title="@string/favourites_synchro_preference_title"
                android:summary="@string/favourites_synchro_preference_summary" 
                android:defaultValue="false"
                android:dependency="synchronization_full"/>
                
	</PreferenceCategory>
	
</PreferenceScreen>