<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="210dp"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/background_dark"

    >

    <TextView
        android:id="@+id/auth_popup_username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/auth_popup_username_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:background="@drawable/textedit_border_color">
	
        <requestFocus android:layout_width="wrap_content" />

    </EditText>

    <TextView
        android:id="@+id/auth_popup_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceSmall" />
	
    <EditText
        android:id="@+id/auth_popup_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/textedit_border_color" 
        >
        
        
    </EditText>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="4dp" />

	<View
	    android:layout_width="180dp"
	    android:layout_height="1dp"
	    android:background="@android:color/darker_gray"
	    android:paddingLeft="4dp"
	    android:paddingRight="4dp"
	    android:layout_gravity="center_horizontal"
	    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        
        android:showDividers="middle"
        android:divider="@drawable/divider"
        android:dividerPadding="4dp"
        android:gravity="center_horizontal"
        android:padding="4dp">

        <Button
            
            android:id="@+id/auth_popup_OK"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:text="@string/OK_button"
       		android:background="@drawable/button_background_color"
            android:textColor="@drawable/button_text_color"           
            />
        <Button
            android:id="@+id/auth_popup_cancel"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:text="@string/cancel_button" 
            android:background="@drawable/button_background_color"
            android:textColor="@drawable/button_text_color" />
          	
    </LinearLayout>

</LinearLayout>