<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/welcome_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome_screen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Space
            android:layout_width="40dp"
            android:layout_height="wrap_content" />
        		<TextView
            android:id="@+id/welcome_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAppearance="?android:attr/textAppearanceSmall" 
            android:lines="1"
            android:visibility="invisible"/> 		<EditText
            android:id="@+id/welcome_username_edit"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" 
            android:lines="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:inputType="text"
            android:visibility="invisible">
            <requestFocus />
        </EditText>
        <Space
            android:layout_width="40dp"
            android:layout_height="wrap_content" />           

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" >
    <Space
            android:layout_width="40dp"
            android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/welcome_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:lines="1"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/welcome_password_edit"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/ifyouhave"
        android:lines="1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:visibility="invisible"/>

    <Space
            android:layout_width="40dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" 
        android:gravity="center_horizontal"
        >
    <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical" 
        android:gravity="center_vertical"
        >
    
	    <Button
	        android:id="@+id/welcome_log_button"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/log_button" 
	        style="?android:attr/buttonStyleSmall"
	        android:onClick="onLogButtonClicked"
	        android:visibility="invisible"
	        />
	    <Button
	     	android:id="@+id/welcome_offline_button"
		    style="?android:attr/buttonStyleSmall"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"   
		    android:text="@string/offline_button"
		    android:onClick="onOfflineButtonClicked"  
		    android:visibility="invisible"
		     />
    </LinearLayout>
    <Space
            android:layout_width="50dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/welcome_change_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" 
        android:visibility="invisible"
        android:onClick="onChangeActivityClicked"
        />
 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal" 
        android:gravity="center_horizontal"
        >
    <TextView
        android:id="@+id/login_failed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_failed"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/holo_red_dark" 
        android:gravity="center_horizontal"
        android:visibility="invisible"/>
   </LinearLayout>

 
</LinearLayout>